commit 2 - poprawa fontawesome

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap"> -->
-    <script rel="stylesheet" href="https://kit.fontawesome.com/3710696c34.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/49052c3078.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
     <div class="item item1">
